test/functions/resolution/errors/testBadCallCandidates.16.good
testBadCallCandidates.chpl:42: In method 'test':
testBadCallCandidates.chpl:44: error: unresolved call 'D.foo("hi")'
testBadCallCandidates.chpl:5: note: this candidate did not match: C.foo(x: string)
testBadCallCandidates.chpl:44: note: because method call receiver with type 'borrowed D'
testBadCallCandidates.chpl:4: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:44: note: other candidates are:
testBadCallCandidates.chpl:33: note:   D.foo(x: C)
note: and 2 other candidates, use --print-all-candidates to see them
